module(
    name = "rules_python_rbe_exec_exploration",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")

bazel_dep(name = "rules_python", version = "0.35.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12", is_default = True)
python.toolchain(python_version = "3.10")
use_repo(python, "python_3_12", "python_3_10", "python_versions")

bazel_dep(name = "rules_foo", version = "0.0.0")
local_path_override(
    module_name = "rules_foo",
    path = "rules_foo",
)
