constraint_setting(
    name = "container-image",
)

constraint_value(
    name = "ubuntu-act-22-04",
    constraint_setting = ":container-image",
)

REMOTE_TARGET_CONSTRAINTS = [
    "@platforms//cpu:x86_64",
    "@platforms//os:linux",
]

REMOTE_EXEC_CONSTRAINTS = [
    "@platforms//cpu:x86_64",
    "@platforms//os:linux",
    ":ubuntu-act-22-04",
]

platform(
    name = "ubuntu-act-22-04-platform",
    constraint_values = REMOTE_EXEC_CONSTRAINTS,
    exec_properties = {
        "container-image": "docker://ghcr.io/catthehacker/ubuntu:act-22.04@sha256:5f9c35c25db1d51a8ddaae5c0ba8d3c163c5e9a4a6cc97acd409ac7eae239448",
        "OSFamily": "linux",
    },
)

toolchain(
    name = "cc-toolchain-k8",
    exec_compatible_with = REMOTE_EXEC_CONSTRAINTS,
    target_compatible_with = REMOTE_TARGET_CONSTRAINTS,
    toolchain = "@remote_config_cc//:cc-compiler-k8",
    toolchain_type = "@rules_cc//cc:toolchain_type",
)
